welcome.lessons.welcome.array.island.Island.scala.error
island:4: error: not found: value i
    if (num(i)>num(i-1)) {
            ^island:4: error: not found: value i
    if (num(i)>num(i-1)) {
                   ^