welcome.lessons.welcome.array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var lvl=0
  for (k<-1 to num.length-1) {
    if (num(i)>num(i-1)) {
      lvl=lvl+1
    }
  }
  return lvl }